Fix whitespace from showing below the footer. Fix extra whitespace from showing when hovering Why Attend button

--- a/src/assets/scss/components/_section.scss
+++ b/src/assets/scss/components/_section.scss
@@ -135,7 +135,7 @@ header {
 			margin-left: 30px;
 
 			&:hover {				
-				background-position: -100% 0;
+				background-position: -99% 0;
 				color: #FFF !important;
 			}
 		}
