--- a/src/assets/scss/layout/_wrapper.scss
+++ b/src/assets/scss/layout/_wrapper.scss
@@ -15,8 +15,6 @@
 		padding-top: 5em;
 		display: flex;
 		flex-flow: column;
-		min-height: 100vh;
-		position: relative;
 
 		&.is-transitioning {
 			opacity: 0;
